test_case/rust-lang_rust/51104_399715982_32.rs
\n\nFor more information about casts, take a look at The Book:\nhttps://doc.rust-lang.org/book/first-edition/casting-between-types.html\n"},"level":"error","spans":[{"file_name":"/checkout/src/test/ui/mismatched_types/cast-rfc0401.rs","byte_start":632,"byte_end":647,"line_start":18,"line_end":18,"column_start":5,"column_end":20,"is_primary":true,"text":[{"text":"    u as *const str //~ ERROR is invalid","highlight_start":5,"highlight_end":20}],"label":null,"suggested_replacement":null,"suggestion_applicability":null,"expansion":null}],"children":[{"message":"vtable kinds may not match","code":null,"level":"note","spans":[],"605","explanation":"\nAn invalid cast was attempted.\n\nErroneous code examples:\n\n